--- a/BECMS.Entity/BECMS.Entity.csproj
+++ b/BECMS.Entity/BECMS.Entity.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\User.cs" />
     <Compile Include="Users\UserMigrations.cs" />
+    <Compile Include="Users\UserRoles.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\FerPROJ.DBHelper\FerPROJ.DBHelper\FerPROJ.DBHelper.csproj">
