--- a/BECMS.Forms/BECMS.Forms.csproj
+++ b/BECMS.Forms/BECMS.Forms.csproj
@@ -54,6 +54,11 @@
       <DependentUpon>ManageLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\FerPROJ.DBHelper\FerPROJ.DBHelper\FerPROJ.DBHelper.csproj">
@@ -88,9 +93,16 @@
     <EmbeddedResource Include="Forms\ManageLogin.resx">
       <DependentUpon>ManageLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\DataSources\BECMS.Models.Users.UserModel.datasource" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\login image.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
