--- a/BECMS.Entity/BECMS.Entity.csproj
+++ b/BECMS.Entity/BECMS.Entity.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntityDbContext\BECMSDbContext.cs" />
+    <Compile Include="Patients\Patient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\User.cs" />
     <Compile Include="Users\UserMigrations.cs" />
