--- a/BECMS.Reports/BECMS.Reports.csproj
+++ b/BECMS.Reports/BECMS.Reports.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{176B154C-3A49-4669-B3FF-64F773D4F1F5}</ProjectGuid>
+    <ProjectGuid>{48683EE9-D4B2-4E45-845C-9BB37B4AAABF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BECMS.Forms</RootNamespace>
-    <AssemblyName>BECMS.Forms</AssemblyName>
+    <RootNamespace>BECMS.Reports</RootNamespace>
+    <AssemblyName>BECMS.Reports</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,8 +31,35 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ComponentFactory.Krypton.Toolkit">
-      <HintPath>..\..\MyDLL\Krypton-master\Bin\ComponentFactory.Krypton.Toolkit.dll</HintPath>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\MyDLL\CrystalDecisions.CrystalReports.Engine.dll</HintPath>
+    </Reference>
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\MyDLL\CrystalDecisions.ReportSource.dll</HintPath>
+    </Reference>
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\MyDLL\CrystalDecisions.Shared.dll</HintPath>
+    </Reference>
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\MyDLL\CrystalDecisions.Windows.Forms.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework">
+      <HintPath>..\..\..\MyDLL\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\..\..\MyDLL\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\MyDLL\MySql.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\MyDLL\MySql.Data.Entity.EF6.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,37 +73,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormLayer.cs" />
-    <Compile Include="Forms\ManageLogin.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\ManageLogin.Designer.cs">
-      <DependentUpon>ManageLogin.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\ManagePatient.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\ManagePatient.Designer.cs">
-      <DependentUpon>ManagePatient.cs</DependentUpon>
-    </Compile>
-    <Compile Include="List\ListPatient.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="List\ListPatient.Designer.cs">
-      <DependentUpon>ListPatient.cs</DependentUpon>
-    </Compile>
-    <Compile Include="List\ListUser.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="List\ListUser.Designer.cs">
-      <DependentUpon>ListUser.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Models\PatientPrescriptionModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
+    <Compile Include="ReportPrint\PatientPrescriptionPrint.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
+      <DependentUpon>PatientPrescriptionPrint.rpt</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
+    <Compile Include="TransactionReport.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\FerPROJ.DBHelper\FerPROJ.DBHelper\FerPROJ.DBHelper.csproj">
@@ -87,10 +92,6 @@
       <Project>{3379010b-3fec-4afc-8db5-8ed0fcbd69bc}</Project>
       <Name>FerPROJ.Design</Name>
     </ProjectReference>
-    <ProjectReference Include="..\BECMS.Base\BECMS.Base.csproj">
-      <Project>{4e736af3-57e9-4a69-b2ba-a868963cfc58}</Project>
-      <Name>BECMS.Base</Name>
-    </ProjectReference>
     <ProjectReference Include="..\BECMS.Entity\BECMS.Entity.csproj">
       <Project>{3db7c1ea-6e7a-45d8-ac68-2dd442f11c60}</Project>
       <Name>BECMS.Entity</Name>
@@ -99,40 +100,22 @@
       <Project>{1f763fe9-75bc-44a5-8853-8e004c182e59}</Project>
       <Name>BECMS.Models</Name>
     </ProjectReference>
-    <ProjectReference Include="..\BECMS.Reports\BECMS.Reports.csproj">
-      <Project>{48683EE9-D4B2-4E45-845C-9BB37B4AAABF}</Project>
-      <Name>BECMS.Reports</Name>
-    </ProjectReference>
     <ProjectReference Include="..\BECMS.Repository\BECMS.Repository.csproj">
       <Project>{5d3dad8a-b8dc-4bbb-b838-9042603b1c25}</Project>
       <Name>BECMS.Repository</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <EmbeddedResource Include="Forms\ManageLogin.resx">
-      <DependentUpon>ManageLogin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ManagePatient.resx">
-      <DependentUpon>ManagePatient.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="List\ListPatient.resx">
-      <DependentUpon>ListPatient.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="List\ListUser.resx">
-      <DependentUpon>ListUser.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ReportPrint\PatientPrescriptionPrint.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>PatientPrescriptionPrint.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\DataSources\BECMS.Models.Patients.PatientModel.datasource" />
-    <None Include="Properties\DataSources\BECMS.Models.Users.UserModel.datasource" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\login image.png" />
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
