--- a/BECMS.Entity/BECMS.Entity.csproj
+++ b/BECMS.Entity/BECMS.Entity.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="EntityDbContext\BECMSDbContext.cs" />
     <Compile Include="Patients\Patient.cs" />
+    <Compile Include="Patients\PatientStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\User.cs" />
     <Compile Include="Users\UserMigrations.cs" />
