--- a/BECMS.Forms/BECMS.Forms.csproj
+++ b/BECMS.Forms/BECMS.Forms.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Forms\ManagePatient.Designer.cs">
       <DependentUpon>ManagePatient.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ManageUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ManageUser.Designer.cs">
+      <DependentUpon>ManageUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="List\ListPatient.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ManagePatient.resx">
       <DependentUpon>ManagePatient.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ManageUser.resx">
+      <DependentUpon>ManageUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="List\ListPatient.resx">
       <DependentUpon>ListPatient.cs</DependentUpon>
