--- a/BECMS.Main/BECMS.Main.csproj
+++ b/BECMS.Main/BECMS.Main.csproj
@@ -60,6 +60,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SystemVersion.cs">
+      <Link>SystemVersion.cs</Link>
+    </Compile>
     <Compile Include="Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
