--- a/BECMS.Repository/BECMS.Repository.csproj
+++ b/BECMS.Repository/BECMS.Repository.csproj
@@ -35,18 +35,18 @@
       <HintPath>..\..\MyDLL\AutoMapper.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework">
-      <HintPath>..\..\MyDLL\EntityFramework.dll</HintPath>
+      <HintPath>..\..\..\MyDLL\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\..\MyDLL\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\..\..\MyDLL\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\MyDLL\MySql.Data.dll</HintPath>
+      <HintPath>..\..\..\MyDLL\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\MyDLL\MySql.Data.Entity.EF6.dll</HintPath>
+      <HintPath>..\..\..\MyDLL\MySql.Data.Entity.EF6.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
