--- a/BECMS.Entity/BECMS.Entity.csproj
+++ b/BECMS.Entity/BECMS.Entity.csproj
@@ -59,7 +59,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntityDbContext\BECMSDbContext.cs" />
+    <Compile Include="PatientRecords\PatientRecordItem.cs" />
     <Compile Include="Patients\Patient.cs" />
+    <Compile Include="PatientRecords\PatientRecord.cs" />
     <Compile Include="Patients\PatientStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\User.cs" />
