--- a/BECMS.Forms/BECMS.Forms.csproj
+++ b/BECMS.Forms/BECMS.Forms.csproj
@@ -71,11 +71,23 @@
     <Compile Include="List\ListPatient.Designer.cs">
       <DependentUpon>ListPatient.cs</DependentUpon>
     </Compile>
+    <Compile Include="List\ListPatientRecord.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="List\ListPatientRecord.Designer.cs">
+      <DependentUpon>ListPatientRecord.cs</DependentUpon>
+    </Compile>
     <Compile Include="List\ListUser.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="List\ListUser.Designer.cs">
       <DependentUpon>ListUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ManagePatientRecord.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ManagePatientRecord.Designer.cs">
+      <DependentUpon>ManagePatientRecord.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -128,8 +140,14 @@
     <EmbeddedResource Include="List\ListPatient.resx">
       <DependentUpon>ListPatient.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="List\ListPatientRecord.resx">
+      <DependentUpon>ListPatientRecord.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="List\ListUser.resx">
       <DependentUpon>ListUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ManagePatientRecord.resx">
+      <DependentUpon>ManagePatientRecord.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -137,6 +155,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\DataSources\BECMS.Models.PatientRecords.PatientRecordItemModel.datasource" />
+    <None Include="Properties\DataSources\BECMS.Models.PatientRecords.PatientRecordModel.datasource" />
     <None Include="Properties\DataSources\BECMS.Models.Patients.PatientModel.datasource" />
     <None Include="Properties\DataSources\BECMS.Models.Users.UserModel.datasource" />
   </ItemGroup>
