--- a/BECMS.Models/BECMS.Models.csproj
+++ b/BECMS.Models/BECMS.Models.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PatientRecords\PatientRecordItemModel.cs" />
+    <Compile Include="PatientRecords\PatientRecordModel.cs" />
     <Compile Include="Patients\PatientModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\UserModel.cs" />
